<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.liron.finalproject.fragments.RegisterFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_fragment_register"
        android:textColor="@color/page_title_color"
        android:paddingTop="10dp"
        android:textStyle="bold"
        android:textSize="@dimen/title_size"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textAlignment="center"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/your_picture_colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
            <ImageView
                android:id="@+id/fragment_register_image_imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_weight="1"

                android:src="@mipmap/default_contact"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/first_name_colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
            <EditText
                android:id="@+id/fragment_register_fName_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_first_name"
                android:inputType="textPersonName" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/last_name_colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
            <EditText
                android:id="@+id/fragment_register_lName_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/birthday_colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
            <EditText
                android:id="@+id/fragment_register_birthday_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_birthday"
                android:inputType="date" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/email_colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
            <EditText
                android:id="@+id/fragment_register_email_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/password_colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
            <EditText
                android:id="@+id/fragment_register_password_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:layout_weight="2">
        <Button
            android:text="@string/verify_email"
            android:id="@+id/fragment_register_verifyEmail_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:text="@string/register"
            android:id="@+id/fragment_register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
