<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.liron.finalproject.fragments.MainFragment"
    android:orientation="vertical"
    android:background="@color/grey_100"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/icon"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="35dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/logo" />
        <TextView
            android:id="@+id/title_text"
            android:textColor="@color/mainTitleColor"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="50sp"
            android:text="@string/app_name"
            android:theme="@style/ThemeOverlay.MyTitleText" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/email_password_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <Button
            android:id="@+id/fragment_main_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in"/>

        <Button
            android:id="@+id/fragment_main_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register" />
    </LinearLayout>

</LinearLayout>
